--- a/semi_TD.ipynb
+++ b/semi_TD.ipynb
@@ -637,8 +637,7 @@
         "\n",
         "We will use the square root of this measure, the root $\\overline{VE}$ to give a rough measure of how much the learned values differ from the true values.\n",
         "\n",
-        "`calc RMSVE()` computes the Root Mean Squared Value Error given learned state value $\\hat{v}(s, \\mathbf{w})$.\n",
-        "We provide you with true state value $v_\\pi(s)$ and state distribution $\\mu(s)$\n"
+        "`calc RMSVE()` computes the Root Mean Squared Value Error given learned state value $\\hat{v}(s, \\mathbf{w})$.\n"
       ],
       "metadata": {
         "id": "biWrvTefmODw"
@@ -648,7 +647,6 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# Here we provide you with the true state value and state distribution\n",
         "true_state_val = np.load('/content/drive/MyDrive/Colab Notebooks/RL_assignments/semi_TD/data/true_V.npy')\n",
         "state_distribution = np.load('/content/drive/MyDrive/Colab Notebooks/RL_assignments/semi_TD/data/state_distribution.npy')\n",
         "\n",
@@ -876,7 +874,7 @@
         "# Section 3: Semi-TD with Nural Networks(DRL is that u?)\n",
         "\n",
         "We will implement an agent to evaluate a fixed policy on the 500-State.Randomwalk.\n",
-        "**In this assignment, you will:**\n",
+        "**We will:**\n",
         "- Implement stochastic gradient descent method for state-value prediction.\n",
         "- Implement semi-gradient TD with a neural network as the function approximator and Adam algorithm.\n",
         "- Compare performance of semi-gradient TD with a neural network and semi-gradient TD with tile-coding.\n"
@@ -1121,7 +1119,7 @@
       "cell_type": "markdown",
       "source": [
         "### Stochastic gradient descent method for state-value prediction\n",
-        "Ww will implement stochastic gradient descent (SGD) method for state_value prediction. Here is the basic SGD update for state-value prediction with TD:\n",
+        "We will implement stochastic gradient descent (SGD) method for state_value prediction. Here is the basic SGD update for state-value prediction with TD:\n",
         "\n",
         "$$\\mathbf{w_{t+1}} = \\mathbf{w_{t}} + \\alpha \\delta_t \\nabla \\hat{v}(S_t,\\mathbf{w_{t}})$$\n",
         "\n",
@@ -1188,7 +1186,7 @@
         "$$ \\mathbf{w_t} = \\mathbf{w_{t-1}} + \\frac{\\alpha}{\\sqrt{\\mathbf{\\hat{v_t}}}+\\epsilon} \\mathbf{\\hat{m_t}}\n",
         "$$\n",
         "\n",
-        "When implementing the agent you will use the Adam algorithm instead of SGD because it is more efficient. We have already provided you the implementation of the Adam algorithm in the cell below. You will use it when implementing your agent."
+        "When implementing the agent we will use the Adam algorithm instead of SGD because it is more efficient."
       ],
       "metadata": {
         "id": "TTZ1BoS3TFO7"
@@ -1606,9 +1604,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We used a mix of  and semi-gradient TD methods with a Neural Network and Adam algorithm in a 500-state Random Walk implementation.\n",
-        "\n",
-        "The learning curve has been graphed for 1000 episodes, showcasing a consistent decrease in the Root Mean Squared Value Error (RMSVE).\n",
+        "We used a mix of  and semi-gradient TD methods with a Neural Network and Adam algorithm in a 500-state Random Walk implementation. The learning curve has been graphed for 1000 episodes, showcasing a consistent decrease in the Root Mean Squared Value Error (RMSVE).\n",
         "\n",
         "Neural networks exhibit impressive capabilities as function approximators, adept at representing a broad array of functions and generating features autonomously, eliminating the need for manual feature engineering. However, in contrast to linear function approximators using tile-coding, neural networks may demonstrate lower sample efficiency."
       ],
@@ -1637,7 +1633,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "LxZquuIhnsUZ",
         "Zf5Qe9lEQsKs",
         "Nz7mbRISRm6M",
         "TTZ1BoS3TFO7",
